Add phonon4qt5-backend-vlc for sounds to work

--- a/debian/kstars/control
+++ b/debian/kstars/control
@@ -31,7 +31,8 @@ Build-Depends: cmake,
                indi-bin (>= 1.4.0),
                wcslib-dev,
                libraw-dev,
-               libgsl-dev
+               libgsl-dev,
+               phonon4qt5-backend-vlc
 Standards-Version: 3.9.3
 Homepage: http://edu.kde.org/
 
