Remove all references to libcfitsio3-dev since libcfitsio-dev is now the standard in all modern distros including 16.04

--- a/debian/kstars/control
+++ b/debian/kstars/control
@@ -25,7 +25,7 @@ Build-Depends: cmake,
                libkf5notifyconfig-dev,
                libeigen3-dev,
                zlib1g-dev,
-               libcfitsio3-dev | libcfitsio-dev,
+                libcfitsio-dev,
                libnova-dev,
                libindi-dev (>= 1.4.0),
                indi-bin (>= 1.4.0),
