--- a/debian/indi-inovaplx/control
+++ b/debian/indi-inovaplx/control
@@ -2,7 +2,7 @@ Source: indi-inovaplx
 Section: science
 Priority: extra
 Maintainer: Jasem Mutlaq <mutlaqja@ikarustech.com>
-Build-Depends: debhelper (>= 6), cdbs, cmake, libindi-dev, zlib1g-dev, libusb-1.0-0-dev, libinovasdk, libcfitsio3-dev | libcfitsio-dev
+Build-Depends: debhelper (>= 6), cdbs, cmake, libindi-dev, zlib1g-dev, libusb-1.0-0-dev, libinovasdk,  libcfitsio-dev
 Standards-Version: 3.9.2
 
 Package: indi-inovaplx
