--- a/debian/libindi/control
+++ b/debian/libindi/control
@@ -5,7 +5,7 @@ Maintainer: Jasem Mutlaq <mutlaqja@ikarustech.com>
 Build-Depends: debhelper (>= 8.1.3~),
  cdbs,
  cmake (>= 2.4.7),
- libcfitsio-dev|libcfitsio3-dev,
+ libcfitsio-dev,
  libnova-dev,
  libusb-1.0-0-dev,
  zlib1g-dev,
