cmake: rewrite libusb-1.0 search
The current FindUSB-1.cmake is a mess: the search uses pkg-config only
as fallback, it mixes USB vs LIBUSB_1 prefixes, it mixes USB-1 vs USB_1
naming, it uses hardcoded paths, and the libusb_error_name() check is
done only on Linux.

As solution, write a brand-new FindUSB1.cmake module: it uses pkg-config
in the right way, it provides coherent naming for variables, and the
libusb_error_name() is done for any OS.

As side change, the define for USB1_HAS_LIBUSB_ERROR_NAME is not
automatically added to the build system, but written in a config-usb.h
file which is used where needed.

--- a/3rdparty/indi-asi/CMakeLists.txt
+++ b/3rdparty/indi-asi/CMakeLists.txt
@@ -8,7 +8,7 @@ include(GNUInstallDirs)
 find_package(CFITSIO REQUIRED)
 find_package(INDI REQUIRED)
 find_package(ZLIB REQUIRED)
-find_package(USB-1 REQUIRED)
+find_package(USB1 REQUIRED)
 find_package(Threads REQUIRED)
 
 # Using ASI Camera SDK Version 0.6.0921 updated on 2017-11-21
@@ -67,7 +67,7 @@ set(indi_asi_SRCS
 
 add_executable(indi_asi_ccd ${indi_asi_SRCS})
 
-target_link_libraries(indi_asi_ccd ${INDI_LIBRARIES} ${CFITSIO_LIBRARIES} ${ASICAMLIB} ${LIBUSB_1_LIBRARIES} ${ZLIB_LIBRARY} ${CMAKE_THREAD_LIBS_INIT})
+target_link_libraries(indi_asi_ccd ${INDI_LIBRARIES} ${CFITSIO_LIBRARIES} ${ASICAMLIB} ${USB1_LIBRARIES} ${ZLIB_LIBRARY} ${CMAKE_THREAD_LIBS_INIT})
 
 
 ########### indi_asi_wheel ###########
@@ -76,7 +76,7 @@ IF (APPLE)
 set(CMAKE_EXE_LINKER_FLAGS "-framework IOKit -framework CoreFoundation")
 target_link_libraries(indi_asi_wheel ${INDI_LIBRARIES} ${ASIFWLIB} ${LIBUSB_LIBRARIES})
 ELSE()
-target_link_libraries(indi_asi_wheel ${INDI_LIBRARIES} ${ASIFWLIB} ${LIBUSB_1_LIBRARIES} ${CMAKE_THREAD_LIBS_INIT})
+target_link_libraries(indi_asi_wheel ${INDI_LIBRARIES} ${ASIFWLIB} ${USB1_LIBRARIES} ${CMAKE_THREAD_LIBS_INIT})
 ENDIF()
 
 
