--- a/3rdparty/indi-qhy/CMakeLists.txt
+++ b/3rdparty/indi-qhy/CMakeLists.txt
@@ -9,7 +9,7 @@ find_package(CFITSIO REQUIRED)
 find_package(INDI REQUIRED)
 find_package(QHY REQUIRED)
 find_package(ZLIB REQUIRED)
-find_package(USB-1 REQUIRED)
+find_package(USB1 REQUIRED)
 find_package(Threads REQUIRED)
 
 set(INDI_QHY_VERSION_MAJOR 1)
@@ -41,7 +41,7 @@ ENDIF ()
 
 add_executable(indi_qhy_ccd ${indiqhy_SRCS})
 
-target_link_libraries(indi_qhy_ccd ${INDI_LIBRARIES} ${CFITSIO_LIBRARIES} ${QHY_LIBRARIES} ${LIBUSB_1_LIBRARIES} ${CMAKE_THREAD_LIBS_INIT})
+target_link_libraries(indi_qhy_ccd ${INDI_LIBRARIES} ${CFITSIO_LIBRARIES} ${QHY_LIBRARIES} ${USB1_LIBRARIES} ${CMAKE_THREAD_LIBS_INIT})
 
 if (CMAKE_HOST_SYSTEM_PROCESSOR MATCHES "arm*")
 target_link_libraries(indi_qhy_ccd rt)
@@ -53,7 +53,7 @@ install(FILES ${CMAKE_CURRENT_BINARY_DIR}/indi_qhy.xml DESTINATION ${INDI_DATA_D
 
 ########### qhy_test_ccd ###########
 add_executable(qhy_ccd_test ${CMAKE_CURRENT_SOURCE_DIR}/qhy_ccd_test.cpp)
-target_link_libraries(qhy_ccd_test ${QHY_LIBRARIES} ${LIBUSB_1_LIBRARIES} ${CMAKE_THREAD_LIBS_INIT})
+target_link_libraries(qhy_ccd_test ${QHY_LIBRARIES} ${USB1_LIBRARIES} ${CMAKE_THREAD_LIBS_INIT})
 
 if (CMAKE_HOST_SYSTEM_PROCESSOR MATCHES "arm*")
     target_link_libraries(qhy_ccd_test rt)
