--- a/debian/libindi/control
+++ b/debian/libindi/control
@@ -11,7 +11,9 @@ Build-Depends: debhelper (>= 8.1.3~),
  zlib1g-dev,
  libjpeg-dev,
  libgsl0-dev | libgsl-dev,
- libcurl4-gnutls-dev
+ libcurl4-gnutls-dev,
+ libtheora-dev,
+ libogg-dev
 Standards-Version: 3.9.5
 Homepage: http://www.indilib.org/
 Vcs-Git: git://github.com/indilib/indi.git
