--- a/.circleci/Dockerfile
+++ b/.circleci/Dockerfile
@@ -1,1 +1,4 @@
 FROM debian:stretch
+RUN apt-get -qq update && apt-get install -qy cdbs dpkg-dev debhelper cmake curl dcraw fakeroot wget 
+RUN apt-get install -qy libcurl4-gnutls-dev libboost-dev libboost-regex-dev libcfitsio-dev libftdi-dev libgphoto2-dev libgps-dev 
+RUN apt-get install -qy libgsl-dev libjpeg-dev libnova-dev libopenal-dev libraw-dev libusb-1.0-0-dev librtlsdr-dev libfftw3-dev zlib1g-dev
