--- a/.circleci/Dockerfile
+++ b/.circleci/Dockerfile
@@ -8,5 +8,22 @@ RUN apt-get -qqy install libgsl-dev libjpeg-dev libnova-dev libopenal-dev libraw
 RUN apt-get -qqy install libconfuse-dev python3-all-dev doxygen libboost-test-dev python-all-dev swig g++ libftdi1-dev
 
 RUN pwd
-RUN ./install-gtest.sh
+RUN ls -l
 
+#RUN ./install-gtest.sh
+# Build gtest framework
+RUN mkdir -p build \
+        pushd build \
+        git clone https://github.com/google/googletest.git \
+        if [ ! -d googletest ]; then \
+            echo "Failed to get googletest.git repo" \
+            exit 1 \
+        fi \
+        pushd googletest \
+        mkdir build \
+        cd build \
+        cmake .. -DCMAKE_CXX_FLAGS="-fPIC" \
+        make install \
+        popd \
+        rm -rf googletest \
+        popd \
