--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,6 +1,6 @@
 version: 2
 jobs:
-  build:
+  build_stretch:
     docker:
       - image: jochym/indi
     steps:
@@ -64,11 +64,11 @@ jobs:
 
 workflows:
   version: 2
-    build_all:
-      jobs:
-        - builder:
-          requires:
-            - build
-            - build_buster
-            - build_artful
+  build_all:
+    jobs:
+      - builder:
+        requires:
+          - build_stretch
+          - build_buster
+          - build_artful
 
