--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -5,9 +5,6 @@ jobs:
       - image: jochym/indi
     steps:
       - checkout
-      - run:
-          name: Install deps
-          command: .circleci/deps-linux.sh
       - run: 
           name: Build core
           command: .circleci/build-core.sh
@@ -20,14 +17,12 @@ jobs:
       - run: 
           name: Run tests
           command: .circleci/run-tests.sh
+
   build_buster:
     docker:
       - image: jochym/indi-buster
     steps:
       - checkout
-      - run:
-          name: Install deps
-          command: .circleci/deps-linux.sh
       - run: 
           name: Build core
           command: .circleci/build-core.sh
@@ -46,9 +41,6 @@ jobs:
       - image: jochym/indi-artful
     steps:
       - checkout
-      - run:
-          name: Install deps
-          command: .circleci/deps-linux.sh
       - run: 
           name: Build core
           command: .circleci/build-core.sh
@@ -62,6 +54,25 @@ jobs:
           name: Run tests
           command: .circleci/run-tests.sh
 
+  build_bionic:
+    docker:
+      - image: jochym/indi-bionic
+    steps:
+      - checkout
+      - run: 
+          name: Build core
+          command: .circleci/build-core.sh
+      - run: 
+          name: Build libs
+          command: .circleci/build-libs.sh
+      - run: 
+          name: Build 3rd party drivers
+          command: .circleci/build-3rdparty.sh
+      - run: 
+          name: Run tests
+          command: .circleci/run-tests.sh
+
+
 workflows:
   version: 2
   build_all:
@@ -69,4 +80,5 @@ workflows:
       - build_stretch
       - build_buster
       - build_artful
+      - build_bionic
 
