Drop redundant travis builds add branch filtering to CCI

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,4 +1,5 @@
 version: 2
+
 jobs:
   build_stretch:
     docker:
@@ -124,3 +125,14 @@ workflows:
       - build_bionic
       - build_clang4
       - build_clang5
+    filters:
+      branches:
+        only:
+          - master
+          - develop
+          - package
+          - /drv_.*$/
+          - refactor/unittest
+
+
+
