--- a/.travis.yml
+++ b/.travis.yml
@@ -10,9 +10,10 @@ matrix:
   include:
     - os: osx
 
-# Default config (on trusty gcc4)
+    # Default config (on trusty gcc4)
     - os: linux
 
+    # For completness - gcc5 build
     - os: linux
       addons:
         apt:
@@ -23,37 +24,6 @@ matrix:
       env:
         - MATRIX_EVAL="CC=gcc-5 && CXX=g++-5"
 
-    - os: linux
-      addons:
-        apt:
-          packages:
-            - g++-6
-          sources: &sources
-            - ubuntu-toolchain-r-test
-      env:
-        - MATRIX_EVAL="CC=gcc-6 && CXX=g++-6"
-
-    - os: linux
-      addons:
-        apt:
-          packages:
-            - g++-7
-          sources: &sources
-            - ubuntu-toolchain-r-test
-      env:
-        - MATRIX_EVAL="CC=gcc-7 && CXX=g++-7"
-
-    - os: linux
-      addons:
-        apt:
-          sources:
-            - ubuntu-toolchain-r-test
-            - llvm-toolchain-trusty-4.0
-          packages:
-            - g++-5
-            - clang-4.0
-      env:
-        - MATRIX_EVAL="CC=clang-4.0 && CXX=clang++-4.0"
 
 branches:
   only:
