Correct branch filters syntax

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -119,20 +119,22 @@ workflows:
   version: 2
   build_all:
     jobs:
-      - build_stretch
-      - build_buster
-      - build_artful
-      - build_bionic
-      - build_clang4
-      - build_clang5
-    filters:
-      branches:
-        only:
-          - master
-          - develop
-          - package
-          - /drv_.*$/
-          - refactor/unittest
+      - builders
+        requires:
+          - build_stretch
+          - build_buster
+          - build_artful
+          - build_bionic
+          - build_clang4
+          - build_clang5
+        filters:
+          branches:
+            only:
+              - master
+              - develop
+              - package
+              - /drv_.*$/
+              - refactor/unittest
 
 
 
