--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -115,11 +115,19 @@ jobs:
           name: Run tests
           command: .circleci/run-tests.sh
 
+  all_builders:
+    docker:
+      - image: debian/stretch
+    steps:
+      - run:
+        name: Run all builders
+        command: echo Done
+
 workflows:
   version: 2
   build_all:
     jobs:
-      - builders
+      - all_builders
         requires:
           - build_stretch
           - build_buster
