Switch on workflows

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -123,17 +123,11 @@ jobs:
         name: Run all builders
         command: echo Done
 
-#workflows:
-#  version: 2
-#  build_all:
-#    jobs:
-#      - build_stretch
-#      - build_buster
-#      - build_artful
-#      - build_bionic
-#      - build_clang4
-#      - build_clang5
-#      - all_builders
+workflows:
+  version: 2
+  build_all:
+    jobs:
+      - all_builders
 #        requires:
 #          - build_stretch
 #          - build_buster
@@ -141,6 +135,12 @@ jobs:
 #          - build_bionic
 #          - build_clang4
 #          - build_clang5
+#      - build_stretch
+#      - build_buster
+#      - build_artful
+#      - build_bionic
+#      - build_clang4
+#      - build_clang5
 
 ##        filters:
 #          branches:
