--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -127,7 +127,7 @@ workflows:
   version: 2
   build_all:
     jobs:
-      - all_builders
+      - all_builders:
         requires:
           - build_stretch
 #          - build_buster
