--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -127,6 +127,7 @@ workflows:
   version: 2
   build_all:
     jobs:
+      - build_stretch
       - all_builders:
         requires:
           - build_stretch
