--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -129,8 +129,8 @@ workflows:
     jobs:
       - build_stretch
       - all_builders:
-        requires:
-          - build_stretch
+#        requires:
+#          - build_stretch
 #          - build_buster
 #          - build_artful
 #          - build_bionic
