--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -128,6 +128,11 @@ workflows:
   build_all:
     jobs:
       - build_stretch
+      - build_buster
+      - build_artful
+      - build_bionic
+      - build_clang4
+      - build_clang5
       - all_builders:
           requires:
             - build_buster
