--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -138,7 +138,7 @@ workflows:
             - build_buster
           filters:
             branches:
-              only: master
+              only: develop
 #        requires:
 #          - build_stretch
 #          - build_buster
